syntax = "proto3";

package jaco.example.car;

option java_package = "com.jaco.example.car";
option java_outer_classname = "CarProto";

message Car {
  string name = 1;
  string model = 2;
  uint32 year = 3;
  Color color = 4;
  repeated Feature features = 5;
  int64 price = 6;
  // ... other fields

  string some_deprecated_field = 9 [deprecated = true];
  reserved 7, 8;
  reserved "reserver_field_name";

  message Color {
    ColorType interior = 1;
    ColorType exterior = 2;

    enum ColorType {
      COLOR_TYPE_UNKNOWN = 0;
      RED = 1;
      BLUE = 2;
      YELLOW = 3;
      WHITE = 4;
    }
  }

  message Feature {
    FeatureType feature_type = 1;
    bool included = 2;

    enum FeatureType {
      FEATURE_TYPE_UNKNOWN = 0;
      ANDROID_AUDIO = 1;
      CAR_PLAY = 2;
      BACK_UP_CAMERA = 3;
    }
  }
}