syntax = "proto3";

package jaco.example.car;

import "car.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.jaco.example.car";

service CarFeedService {
  rpc GetCarFeed(GetCarFeedRequest) returns (stream CarFeed);
}

message GetCarFeedRequest {
  string filter = 1;
}

message CarFeed {
  Car car = 1;
  google.protobuf.Timestamp submission_timestamp = 2;
}